[ADD] More Frontend Sttuff
